--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,18 @@
 body {
   background-color: #f0f8f0;
   color: #333;
+  justify-content: center;
 }
 
 .App {
   max-width: 100vw;
   margin: 0 auto;
   padding: 20px;
+  text-align: center;
 }
 
 header {
-  width: 100vw;
+  width: 90vw;
   text-align: center;
   margin-bottom: 30px;
   padding: 20px;
